feat: add desktop rewards center
